fixing issue z-index

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -10,6 +10,7 @@
  nav {
    margin-top: 5px;
    position: fixed;
+   z-index: 99;
  }
 
 /* home tab */
@@ -28,7 +29,7 @@
 #contact {
    font-weight: bold;
    margin-top: 45px;
-   
+
 }
 /* paragraph */
  #P {
@@ -39,19 +40,19 @@
 
 /* main body container */
  #main-container {
-   padding-top: 35px;
+   padding-top: 75px;
    min-height: calc(100vh - 70px);
   
  }
  /* main contact section */
  .main-section {
    width: 100%;
-   max-width: 650px;
+   max-width: 640px;
    padding: 10px;
    margin: auto;
    margin-bottom: 25px;
    border: 3px solid lightslategray;
-   box-shadow: 15px 2px 100px 2px rgb(53, 51, 51);
+   box-shadow: 15px 2px 80px 2px rgb(53, 51, 51);
  }
  
  /* footer */ 
